using toList method from stream api